--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -195,14 +195,31 @@ jobs:
           # Enable ARM64 architecture for apt
           sudo dpkg --add-architecture arm64
           
-          # Modify default sources to only use amd64
-          sudo sed -i 's/deb http/deb [arch=amd64] http/g' /etc/apt/sources.list
-          sudo sed -i 's/deb https/deb [arch=amd64] https/g' /etc/apt/sources.list
+          # Remove the default Ubuntu sources that don't support ARM64
+          sudo rm -f /etc/apt/sources.list.d/ubuntu.sources
           
-          # Add ARM64 ports repository
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs) main restricted universe multiverse" | sudo tee /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs)-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs)-security main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
+          # Create proper deb822 format sources for both amd64 and arm64
+          cat <<EOF | sudo tee /etc/apt/sources.list.d/amd64.sources
+          Types: deb
+          URIs: http://azure.archive.ubuntu.com/ubuntu/
+          Suites: noble noble-updates noble-backports
+          Components: main restricted universe multiverse
+          Architectures: amd64
+          
+          Types: deb
+          URIs: http://security.ubuntu.com/ubuntu/
+          Suites: noble-security
+          Components: main restricted universe multiverse
+          Architectures: amd64
+          EOF
+          
+          cat <<EOF | sudo tee /etc/apt/sources.list.d/arm64.sources
+          Types: deb
+          URIs: http://ports.ubuntu.com/ubuntu-ports/
+          Suites: noble noble-updates noble-backports noble-security
+          Components: main restricted universe multiverse
+          Architectures: arm64
+          EOF
           
           sudo apt-get update
           
@@ -362,14 +379,31 @@ jobs:
           # Enable ARM64 architecture
           sudo dpkg --add-architecture arm64
           
-          # Modify default sources to only use amd64
-          sudo sed -i 's/deb http/deb [arch=amd64] http/g' /etc/apt/sources.list
-          sudo sed -i 's/deb https/deb [arch=amd64] https/g' /etc/apt/sources.list
+          # Remove the default Ubuntu sources that don't support ARM64
+          sudo rm -f /etc/apt/sources.list.d/ubuntu.sources
           
-          # Add ARM64 ports repository
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs) main restricted universe multiverse" | sudo tee /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs)-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports $(lsb_release -cs)-security main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
+          # Create proper deb822 format sources for both amd64 and arm64
+          cat <<EOF | sudo tee /etc/apt/sources.list.d/amd64.sources
+          Types: deb
+          URIs: http://azure.archive.ubuntu.com/ubuntu/
+          Suites: noble noble-updates noble-backports
+          Components: main restricted universe multiverse
+          Architectures: amd64
+          
+          Types: deb
+          URIs: http://security.ubuntu.com/ubuntu/
+          Suites: noble-security
+          Components: main restricted universe multiverse
+          Architectures: amd64
+          EOF
+          
+          cat <<EOF | sudo tee /etc/apt/sources.list.d/arm64.sources
+          Types: deb
+          URIs: http://ports.ubuntu.com/ubuntu-ports/
+          Suites: noble noble-updates noble-backports noble-security
+          Components: main restricted universe multiverse
+          Architectures: arm64
+          EOF
           
           sudo apt-get update
           
