--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -302,6 +302,16 @@ jobs:
           export CXX=aarch64-linux-gnu-g++
           export AR=aarch64-linux-gnu-ar
           export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
+          
+          # OpenSSL specific settings for cross-compilation
+          export OPENSSL_DIR=/usr
+          export OPENSSL_INCLUDE_DIR=/usr/include
+          export OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu
+          
+          # Prevent passing -m64 flag to ARM compiler
+          export HOST_CC=gcc
+          export TARGET_CC=aarch64-linux-gnu-gcc
+          
           cargo build --release --target aarch64-unknown-linux-gnu
           aarch64-linux-gnu-strip target/aarch64-unknown-linux-gnu/release/reel
 
@@ -440,7 +450,16 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y flatpak flatpak-builder
+          
+          # Add flathub remote for both system and user
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          
+          # Update remote metadata
+          sudo flatpak update --appstream
+          flatpak update --user --appstream
+          
+          # Install required runtimes
           sudo flatpak install -y flathub org.gnome.Platform//48 org.gnome.Sdk//48 org.freedesktop.Sdk.Extension.rust-stable//23.08
 
       - name: Setup uv for Python dependency management
