--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -240,7 +240,17 @@ jobs:
             gcc-aarch64-linux-gnu \
             g++-aarch64-linux-gnu \
             pkg-config \
-            libssl-dev:arm64
+            libssl-dev:arm64 \
+            libgtk-4-dev:arm64 \
+            libadwaita-1-dev:arm64 \
+            libgstreamer1.0-dev:arm64 \
+            libgstreamer-plugins-base1.0-dev:arm64 \
+            libmpv-dev:arm64 \
+            libsqlite3-dev:arm64 \
+            libdbus-1-dev:arm64 \
+            libglib2.0-dev:arm64 \
+            libcairo2-dev:arm64 \
+            libpango1.0-dev:arm64
 
       - name: Install system dependencies
         run: |
@@ -297,11 +307,16 @@ jobs:
         if: matrix.arch == 'aarch64'
         run: |
           export PKG_CONFIG_ALLOW_CROSS=1
-          export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+          export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig
+          export PKG_CONFIG_SYSROOT_DIR=/
           export CC=aarch64-linux-gnu-gcc
           export CXX=aarch64-linux-gnu-g++
           export AR=aarch64-linux-gnu-ar
           export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
+          
+          # Library paths for cross-compilation
+          export LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
+          export LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
           
           # OpenSSL specific settings for cross-compilation
           export OPENSSL_DIR=/usr
