--- a/Cross.toml
+++ b/Cross.toml
@@ -2,7 +2,7 @@
 # https://github.com/cross-rs/cross
 
 [target.aarch64-unknown-linux-gnu]
-# Use a custom Docker image with GTK4 and dependencies pre-installed
+# Use a custom Docker image that includes all dependencies
 image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:latest"
 
 # Pre-build hook to install required dependencies in the Docker container
@@ -12,15 +12,10 @@ pre-build = [
     "apt-get install -y --no-install-recommends libgtk-4-dev:arm64 libadwaita-1-dev:arm64 libgstreamer1.0-dev:arm64 libgstreamer-plugins-base1.0-dev:arm64 libmpv-dev:arm64 libsqlite3-dev:arm64 libssl-dev:arm64 libdbus-1-dev:arm64"
 ]
 
-# Environment variables for cross-compilation
+# Pass through environment variables from the host
 [target.aarch64-unknown-linux-gnu.env]
 passthrough = [
     "CARGO_TERM_COLOR",
     "VERSION",
     "ARCH"
 ]
-PKG_CONFIG_ALLOW_CROSS = "1"
-PKG_CONFIG_PATH = "/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig"
-OPENSSL_DIR = "/usr"
-OPENSSL_LIB_DIR = "/usr/lib/aarch64-linux-gnu"
-OPENSSL_INCLUDE_DIR = "/usr/include/aarch64-linux-gnu"
