--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -227,6 +227,7 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.arch == 'aarch64' && 'aarch64-unknown-linux-gnu' || '' }}
+          rustflags: ""  # Disable -D warnings
 
       - name: Cache cargo dependencies
         uses: actions/cache@v4
