feat: Implement immersive player with window chrome management
- Hide header bar and toolbar when entering player for distraction-free viewing
- Save and restore window state (size, maximized, fullscreen) on player exit
- Auto-hide cursor after 3 seconds of inactivity during playback
- Resize window to match video aspect ratio (max 1920px width)
- Add CSS styling for fullscreen player with OSD controls
- Integrate cursor and window management into PlayerPage component
- Track window state in MainWindow for proper restoration

Also includes initial worker component implementations:
- ImageLoader worker for async image fetching with LRU cache
- SearchWorker for full-text search with Tantivy
- SyncWorker for background synchronization

This provides a professional immersive viewing experience matching the GTK implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ sha2 = "0.10"
 md5 = "0.7"
 lru = "0.16"
 lazy_static = "1.5"
+tantivy = "0.22"
 
 # Localization
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
