refactor: Remove GTK feature flag and complete Relm4 migration cleanup
- Remove gtk feature flag from Cargo.toml and all conditional compilation
- Delete entire src/platforms/gtk/ directory with legacy GTK implementation
- Remove unused src/core/viewmodels/ directory (not used by Relm4)
- Clean up src/utils/image_loader.rs (GTK-specific, Relm4 has its own)
- Update platform modules to remove GTK references
- Update documentation (README.md) to reflect pure Relm4 architecture
- Simplify build.rs as no GTK-specific configuration needed

The codebase is now fully migrated to Relm4 with no remaining GTK platform code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,10 @@ categories = ["multimedia", "gui"]
 
 [features]
 default = ["relm4"]
-gtk = ["dep:gtk4", "dep:gdk4", "dep:gdk-pixbuf", "dep:libadwaita", "dep:glib-build-tools"]
 relm4 = ["dep:relm4", "dep:relm4-components", "dep:relm4-icons", "dep:gtk4", "dep:gdk4", "dep:libadwaita", "dep:tracker"]
 
 [dependencies]
-# GTK and UI (optional for GTK feature)
+# GTK and UI (required for Relm4)
 gtk4 = { version = "0.10", features = ["v4_14"], optional = true }
 gdk4 = { version = "0.10", features = ["v4_14"], optional = true }
 gdk-pixbuf = { version = "0.21", optional = true }
